cart page complete

--- a/themes/demo/pages/sample-lesson-1.htm
+++ b/themes/demo/pages/sample-lesson-1.htm
@@ -35,35 +35,7 @@ layout = "default"
 
         </div>
         <div class="col-sm-2">
-            <div class="class-select">
-                <nav>
-                    <ul>
-                        <li class="active">
-                            <a href="/sample-lesson-1">שיעורים</a></li>
-                        <li>
-                            <a href="#">פריצת דלתות בתים</a>
-                        </li>
-                        <li>
-                            <a href="#">מנעולים</a>
-                        </li>
-                        <li>
-                            <a href="#">פריצת כספות</a>
-                        </li>
-                        <li>
-                            <a href="#">פריצת מנעוליי תליה</a>
-                        </li>
-                        <li>
-                            <a href="#">שכפול מפתחות רכבים</a>
-                        </li>
-                        <li>
-                            <a href="#">שכפול מפתחות דלתות</a>
-                        </li>
-                        <li>
-                            <a href="#">קידוד ושכפול שלטים</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+            {% content "lessons.htm" %}
         </div>
 
     </div>
