--- a/themes/demo/pages/cart.htm
+++ b/themes/demo/pages/cart.htm
@@ -183,10 +183,10 @@ layout = "default"
                             <p>סה״כ מחיר לפני מע״מ:<strong> 280 ש״ח</strong></p>
                             <div class="row text-right">
                                 <div class="col-md-6">
-                                    <input type="button" class="invite-more button" name="send-invitation" value="שגר הזמנה">
+                                    <a href="/details-payment"><input type="button" class="invite-more button" name="send-invitation" value="שגר הזמנה"></a>
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="button" class="contact-form button" name="invite-more" value="הזמן עוד">
+                                    <a href="/shop-products"><input type="button" class="contact-form button" name="invite-more" value="הזמן עוד"></a>
                                 </div>
                             </div>
 
