--- a/themes/demo/pages/details-payment.htm
+++ b/themes/demo/pages/details-payment.htm
@@ -26,23 +26,23 @@ layout = "default"
             <h5 class="class-section-title" style="margin-right: 10px;">כתובת לשליחה</h5>
             <div class="row login-row">
                 <div class="col-xs-12 text-center">
-                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*כתובת" required>
                 </div>
             </div>
             <div class="row login-row">
                 <div class="col-xs-6 text-right">
-                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*מיקוד" required>
                 </div>
                 <div class="col-xs-6 text-left">
-                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*עיר" required>
                 </div>
             </div>
             <div class="row login-row">
                 <div class="col-xs-6 text-right">
-                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*מדינה" required>
                 </div>
                 <div class="col-xs-6 text-left">
-                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*מיקוד" required>
                 </div>
             </div>
         </div>
@@ -50,31 +50,36 @@ layout = "default"
             <h5 class="class-section-title" style="margin-right: 10px;">פרטי חשבון</h5>
             <div class="row login-row">
                 <div class="col-xs-6 text-right">
-                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*שם משפחה" required>
                 </div>
                 <div class="col-xs-6 text-left">
-                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*כתובת" required>
                 </div>
             </div>
             <div class="row login-row">
                 <div class="col-xs-6 text-right">
-                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*עיר" required>
                 </div>
                 <div class="col-xs-6 text-left">
-                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*טלפון" required>
                 </div>
             </div>
             <div class="row login-row">
                 <div class="col-xs-6 text-right">
-                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*מדינה" required>
                 </div>
                 <div class="col-xs-6 text-left">
-                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*מיקוד" required>
                 </div>
             </div>
             <div class="row login-row">
                 <div class="col-xs-12 text-center">
-                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="">
+                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*כתובת" required>
+                </div>
+            </div>
+            <div class="row login-row">
+                <div class="col-xs-12 text-center">
+                    <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*מייל" required>
                 </div>
             </div>
             <div class="row login-row">
