--- a/themes/demo/pages/products.htm
+++ b/themes/demo/pages/products.htm
@@ -49,7 +49,7 @@ layout = "default"
                             <div class="row">
                                 <div class="col-xs-6 col-sm-6 text-left">
                                     <a href="/cart"><img src="/themes/demo/assets/images/cart.png" class="product-cart"></a>
-                                    <a href="/wishlist"><img src="/themes/demo/assets/images/whishlist.png" class="product-cart"></a>
+                                    <a href="/product-info"><img src="/themes/demo/assets/images/whishlist.png" class="product-cart"></a>
                                 </div>
                                 <div class="col-xs-6  col-sm-6 text-right">
                                     <div class="pirce-container">
