--- a/themes/demo/pages/sample-lesson.htm
+++ b/themes/demo/pages/sample-lesson.htm
@@ -123,7 +123,7 @@ layout = "default"
                 </div>
                 <div class="modal-footer">
                     <div class="row text-center">
-                        <input type="submit" class="contact-form button" name="login" onkeyup="rtl(this);" value=" שלח ">
+                        <a href="/shop-products"><input type="button" class="contact-form button"value=" שלח "></a>
                     </div>
                 </div>
             </div>
