--- a/themes/demo/content/welcome.htm
+++ b/themes/demo/content/welcome.htm
@@ -7,12 +7,12 @@
         <div class="container">
             <div class="row banner-text">
                 <div class="col-md-10">
-                    <div class="title-modern">האקדמיה</div>
-                    <div class="title-modern">הבינלאומית למנעולנות</div>
-                    <div>זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק,</div>
-                    <div>הדשוק, הדש תוק, הדש שנרא התידם הכייר וק.</div>
-                    <button class="text-right btn-banner-button"> קבלת גישה מיידית לקורס</button>
-                    <button class="text-right btn-banner-button"> קבלת גישה מיידית לקורס</button>
+                    <h2 class="title-modern">האקדמיה</h2>
+                    <h2 class="title-modern">הבינלאומית למנעולנות</h2>
+                    <p>זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק,</p>
+                    <p>הדשוק, הדש תוק, הדש שנרא התידם הכייר וק.</p>
+                    <a href="/cross"><button class="text-right btn-banner-button"> קבלת גישה מיידית לקורס</button></a>
+                    <a href="/cross"><button class="text-right btn-banner-button"> קבלת גישה מיידית לקורס</button></a>
                 </div>
             </div>
 
@@ -169,16 +169,16 @@
         <div class="image-bottom" style="background-image: url('/themes/demo/assets/images/bottom-banner.png')"></div>
         <div class="container" style="margin-top: 100px;">
             <div class="row banner-text">
-                <div class="col-sm-4 col-sm-offset-2">
-                    <div class="title-modern">וזמינות בכל המכשירים </div>
-                    <div class="title-modern">תיאור כללי של הקורס </div>
+                <div class="col-md-4 col-md-offset-2 col-sm-6">
+                    <h2 class="title-modern">וזמינות בכל המכשירים </h2>
+                    <h2 class="title-modern">תיאור כללי של הקורס </h2>
                     <div>
                         זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק הבקידש שנרא התידם הכייר וק.זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש
 
                     </div>
                     <button class="text-right btn-bottom-banner-button"> הזמן עכשיו ></button>
                 </div>
-                <div class="col-sm-4 ">
+                <div class="col-md-4 col-sm-6">
                     <img src="/themes/demo/assets/images/banner-bottom-com.png" style="width: 100%;">
                 </div>
             </div>
