--- a/themes/demo/pages/cross.htm
+++ b/themes/demo/pages/cross.htm
@@ -21,7 +21,7 @@ layout = "default"
 </div>
 <div class="container">
     <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/a3.png" class="cross-image">
@@ -30,11 +30,11 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <a href="/sample-lesson"><input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >"></a>
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/a2.png" class="cross-image">
@@ -47,7 +47,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/a1.png" class="cross-image">
@@ -62,7 +62,7 @@ layout = "default"
         </div>
     </div>
     <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/b3.png" class="cross-image">
@@ -75,7 +75,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/b2.png" class="cross-image">
@@ -88,7 +88,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/b1.png" class="cross-image">
@@ -103,7 +103,7 @@ layout = "default"
         </div>
     </div>
     <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/c3.png" class="cross-image">
@@ -116,7 +116,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/c2.png" class="cross-image">
@@ -129,7 +129,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 col-sm-4">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/c1.png" class="cross-image">
