--- a/themes/demo/content/welcome.htm
+++ b/themes/demo/content/welcome.htm
@@ -19,13 +19,13 @@
         </div>
     </div>
 </div>
-<div class="section">
-    <div class="container">
+<div class="section background-grey">
+    <div class="container" style="background: #ffffff;">
         <div class="content">
             <div class="team">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
-                        <div class="row">
+                        <div class="row" style="margin-top: 50px;">
                             <div class="col-sm-4">
                                 <div class="card-percent card-member">
                                     <div class="content">
@@ -80,50 +80,48 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="container">
         <div class="content">
             <div class="team">
-                <div class="row">
-                    <div class="col-sm-3">
+                <div class="row" style="margin-top: 40px;margin-bottom: 20px;">
+                    <div class="col-sm-3 col-md-3  col-xs-6 client-content">
                         <div class="card card-client card-member">
                             <div class="content">
                                 <div class="percent">
-                                    <img alt="..." class="img-circle" src="/themes/demo/assets/images/client-1.png"/>
-                                    <div class="img-bar" style="background: #223bc5"></div>
+                                    <img alt="..." class="" src="/themes/demo/assets/images/client-1.png"/>
+                                    <div class="img-bar" style="background: #0062af"></div>
                                 </div>
 
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 col-md-3 col-xs-6 client-content">
                         <div class="card card-client card-member">
                             <div class="content">
                                 <div class="percent">
-                                    <img alt="..." class="img-circle" src="/themes/demo/assets/images/client-2.png"/>
-                                    <div class="img-bar" style="background: #237ec5"></div>
+                                    <img alt="..." class="" src="/themes/demo/assets/images/client-2.png"/>
+                                    <div class="img-bar" style="background: #00a6e9"></div>
                                 </div>
 
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 col-md-3 col-xs-6 client-content">
                         <div class="card card-client card-member">
                             <div class="content">
                                 <div class="percent">
-                                    <img alt="..." class="img-circle" src="/themes/demo/assets/images/client-3.png"/>
-                                    <div class="img-bar" style="background: #6378c5"></div>
+                                    <img alt="..." class="" src="/themes/demo/assets/images/client-3.png"/>
+                                    <div class="img-bar" style="background: #0bc8ff"></div>
                                 </div>
 
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-3 col-md-3 col-xs-6 client-content">
                         <div class="card card-client card-member">
                             <div class="content">
                                 <div class="percent">
-                                    <img alt="..." class="img-circle" src="/themes/demo/assets/images/client-4.png"/>
-                                    <div class="img-bar" style="background: #88a3c5"></div>
+                                    <img alt="..." class="" src="/themes/demo/assets/images/client-4.png"/>
+                                    <div class="img-bar" style="background: #9fe9ff"></div>
                                 </div>
                             </div>
                         </div>
@@ -142,8 +140,8 @@
                 <div class="col-sm-6">
                     <div class="row" style="margin-top: 40px;">
                         <div class="col-sm-8">
-                            <span class="book-text-header">האקדמיה הבינלאומית</span><br>
-                            <span class="book-text-header">                            למנעולנות                        </span>
+                            <span class="book-text-header" style="color: #091036">האקדמיה הבינלאומית</span><br>
+                            <span class="book-text-header" style="color: #091036">                            למנעולנות                        </span>
                         </div>
                         <div class="col-sm-4 ">
                             <img src="/themes/demo/assets/images/logo-body.png">
@@ -188,7 +186,7 @@
 <div class="section section-header">
     <div class="offer-certain-date">
         <div class="row">
-            <h2 style="color: #3295ff">מבצע אטרקטיבי עד תאריך מסויים</h2>
+            <h2 style="color: #00c0f6;margin-top: 30px;">מבצע אטרקטיבי עד תאריך מסויים</h2>
             <h4 style="color: #ffffff">                כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק הבקידש שנרא התידם הכייר וק.</h4>
         </div>
         <div class="row">
@@ -203,6 +201,6 @@
         <div class="description-bottom-2">
             זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק הבקידש שנרא התידם הכייר וק.
         </div>
-        <img src="/themes/demo/assets/images/description-com.png" style="width:50%;margin-left: 40px;">
+        <img src="/themes/demo/assets/images/description-com.png" style="width:50%;margin-left: 40px;padding: 30px;">
     </div>
 </div>
