--- a/themes/demo/pages/cross.htm
+++ b/themes/demo/pages/cross.htm
@@ -6,7 +6,7 @@ layout = "default"
 <div class="section section-header">
     <div class="filter filter-color-red">
         <div class="image"
-             style="background-image: url('/themes/demo/assets/images/cross-slide.png')">
+             style="background-image: url('/themes/demo/assets/images/cross-slide.png');">
         </div>
         <div class="container">
             <div class="row text-center" style="margin-top:100px;">
@@ -19,9 +19,9 @@ layout = "default"
         </div>
     </div>
 </div>
-<div class="container">
+<div class="container" style="margin-top: 100px;margin-bottom: 100px;">
     <div class="row text-center">
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/a3.png" class="cross-image">
@@ -34,7 +34,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/a2.png" class="cross-image">
@@ -47,7 +47,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/a1.png" class="cross-image">
@@ -62,7 +62,8 @@ layout = "default"
         </div>
     </div>
     <div class="row text-center">
-        <div class="col-md-4 col-sm-4">
+
+        <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/b3.png" class="cross-image">
@@ -75,7 +76,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/b2.png" class="cross-image">
@@ -88,7 +89,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/b1.png" class="cross-image">
@@ -103,7 +104,8 @@ layout = "default"
         </div>
     </div>
     <div class="row text-center">
-        <div class="col-md-4 col-sm-4">
+
+    <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/c3.png" class="cross-image">
@@ -116,7 +118,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/c2.png" class="cross-image">
@@ -129,7 +131,7 @@ layout = "default"
                 </div>
             </div>
         </div>
-        <div class="col-md-4 col-sm-4">
+        <div class="col-md-4 ">
             <div class="cross-container">
                 <div class="cross-container-header">
                     <img src="/themes/demo/assets/images/c1.png" class="cross-image">
