--- a/themes/demo/pages/sample-lesson.htm
+++ b/themes/demo/pages/sample-lesson.htm
@@ -1,5 +1,5 @@
 title = "Demonstration"
-url = "/sample-lesson-1"
+url = "/sample-lesson"
 layout = "default"
 ==
 
@@ -32,69 +32,7 @@ layout = "default"
                 <iframe src="http://www.youtube.com/embed/W7qWa52k-nE"
                         width="560" height="315" frameborder="0" allowfullscreen></iframe>
             </div>
-            <div class="row">
 
-                <form>
-
-                    <div class="list-group">
-                        <div class="list-group ">
-                            <a href="#SoftPc1" class="list-group-item class-section" data-toggle="collapse"
-                               aria-expanded="false" aria-controls="collapseExample">
-                                <h5 class="class-section-title">שאלה ראשונה</h5>
-                                <div style="margin-top:-12px;" class="pull-left"><i class="fa fa-sort-desc"></i></div>
-                                <p>זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק ?</p>
-                            </a>
-
-                        </div>
-                    </div>
-                    <div class="list-group">
-                        <div class="list-group ">
-                            <a href="#SoftPc" class="list-group-item class-section" data-toggle="collapse"
-                               aria-expanded="false" aria-controls="collapseExample">
-                                <h5 class="class-section-title">שאלה שניה</h5>
-                                <div style="margin-top:-12px;" class="pull-left"><i class="fa fa-sort-desc"></i></div>
-                                <p>זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק ?</p>
-                            </a>
-
-                        </div>
-                    </div>
-                    <div class="list-group">
-                        <div class="list-group ">
-                            <a href="#SoftPc2" class="list-group-item class-section" data-toggle="collapse"
-                               aria-expanded="false" aria-controls="collapseExample">
-                                <h5 class="class-section-title">זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק ?</h5>
-                                <div style="margin-top:-12px;" class="pull-left"><i class="fa fa-sort-desc"></i></div>
-                                <p>זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק ?</p>
-                            </a>
-                            <div class="collapse" id="SoftPc2">
-                                <div class="woll">
-                                    <div class="list-group ssilka">
-
-                                        <label class=" list-group-radio">
-                                            <input type="radio" class="radio-custom" name="optradio2" data-toggle="modal" data-target="#sample_good">זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק
-                                        </label>
-
-                                        <label class=" list-group-radio">
-                                            <input type="radio" class="radio-custom" name="optradio2"  data-toggle="modal" data-target="#sample_bad">זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק
-                                        </label>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="list-group">
-                        <div class="list-group ">
-                            <a href="#SoftPc3" class="list-group-item class-section" data-toggle="collapse"
-                               aria-expanded="false" aria-controls="collapseExample">
-                                <h5 class="class-section-title">שאלה רביעית</h5>
-                                <div style="margin-top:-12px;" class="pull-left"><i class="fa fa-sort-desc"></i></div>
-                                <p>זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק ?</p>
-                            </a>
-
-                        </div>
-                    </div>
-                </form>
-            </div>
         </div>
         <div class="col-sm-2">
             {% content "lessons.htm" %}
@@ -102,61 +40,4 @@ layout = "default"
 
     </div>
 </div>
-<div class="modal fade" id="sample_good" role="dialog">
-    <div class="modal-dialog">
 
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="custom-modal">
-                <div class="modal-header">
-                    <!--<div class="row">-->
-                    <div class="modal-header-logo">
-                        <img src="/themes/demo/assets/images/succeed.png" class="modal-logo">
-                    </div>
-                    <!--</div>-->
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body text-center">
-                    <h2>הצלחת!</h2>
-                    <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
-
-                </div>
-                <div class="modal-footer">
-                    <div class="row text-center">
-                        <a href="/shop-products"><input type="button" class="contact-form button"value=" שלח "></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-<div class="modal fade" id="sample_bad" role="dialog">
-    <div class="modal-dialog">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="custom-modal">
-                <div class="modal-header">
-                    <!--<div class="row">-->
-                    <div class="modal-header-logo">
-                        <img src="/themes/demo/assets/images/downvote.png" class="modal-logo" style="color: #3295ff">
-                    </div>
-                    <!--</div>-->
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
-                </div>
-                <div class="modal-body text-center">
-                    <h2>מצטער!</h2>
-                    <h4> אנא השאירו פרטים ונחזור אליכם בהקדם להשלמת פרטי ההזמנה!</h4>
-
-                </div>
-                <div class="modal-footer">
-                    <div class="row text-center">
-                        <input type="submit" class="contact-form button" name="login" onkeyup="rtl(this);" value=" שלח ">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
