--- a/themes/demo/pages/about-us.htm
+++ b/themes/demo/pages/about-us.htm
@@ -2,29 +2,29 @@ title = "Demonstration"
 url = "/about-us"
 layout = "default"
 ==
+<div class="about-us-section">
+    <div class="section section-header">
+        <div class="filter filter-color-red">
+            <div class="section-about-us image"
+                 style="background-image: url('/themes/demo/assets/images/slice.png')">
+            </div>
 
-<div class="section section-header">
-    <div class="filter filter-color-red">
-        <div class="section-about-us image"
-             style="background-image: url('/themes/demo/assets/images/slice.png')">
         </div>
-
     </div>
-</div>
-<div class="section section-about-us">
-    <div class="container container-about-us">
+    <div class="container container-about-us" style="    margin-top: -30px;    position: relative;">
         <div class="row text-center">
             <img class="about-lock" src="/themes/demo/assets/images/lock.png">
         </div>
+
         <div class="row text-center">
             <h2 style="color: #3295ff">מבצע אטרקטיבי עד תאריך מסויים</h2>
         </div>
         <div class="row text-center">
             <div class="col-sm-8 col-sm-offset-2">
                 <p>
-                    זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדשתוק,
-                    הדש שנרא הת זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק
-                    הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש תוק, הדש שנרא.זותה מנק הבקיץ אפאח דלאמת יבש,
+                                זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדשתוק,
+                                הדש שנרא הת זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק
+                                הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש תוק, הדש שנרא.זותה מנק הבקיץ אפאח דלאמת יבש,
                     כאנה ניצאחו וק.
                 </p>
             </div>
@@ -40,11 +40,9 @@ layout = "default"
             </div>
         </div>
         <div class="row text-center contact-info">
-            <h2>050-000-0000</h2>
-            <h2>mail@gmail.com</h2>
+            <h2 style="color: #091036">050-000-0000</h2>
+            <h2 style="color: #091036">mail@gmail.com</h2>
         </div>
     </div>
-</div>
-<div class="section-about-us-footer">
-
+    <div class="section-about-us-footer"></div>
 </div>
