contact cross fix

--- a/themes/demo/pages/cross.htm
+++ b/themes/demo/pages/cross.htm
@@ -30,7 +30,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <a href="/sample-lesson"><input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >"></a>
+                    <a href="/sample-lesson"><input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >"></a>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >">
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >">
                 </div>
             </div>
         </div>
@@ -72,7 +72,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >">
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >">
                 </div>
             </div>
         </div>
@@ -98,7 +98,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >">
                 </div>
             </div>
         </div>
@@ -114,7 +114,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >">
                 </div>
             </div>
         </div>
@@ -127,7 +127,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >">
                 </div>
             </div>
         </div>
@@ -140,7 +140,7 @@ layout = "default"
                 </div>
                 <div class="cross-container-body">
                     <p>זותה מנק הבם תוק, הדש שנרא התידם זותה מנק הבקיץ אפאח דלאמת יבש, כק הבקי ם זותה מנק הבקיץ אפאח דלאמת יבש.</p>
-                    <input type="button" class="btn-order-completed button" name="send-invitation" value="הזמן עכשיו >">
+                    <input type="button" class="send-invitation button" name="send-invitation" value="הזמן עכשיו >">
                 </div>
             </div>
         </div>
