shop-product page fix

--- a/themes/demo/pages/cart.htm
+++ b/themes/demo/pages/cart.htm
@@ -178,7 +178,7 @@ layout = "default"
                     <div class="row">
 
                         <div class="col-md-6 text-right">
-                            <p>סה״כ מחיר לפני מע״מ:<strong> 240 ש״ח</strong></p>
+                            <p style="margin-top: 20px">סה״כ מחיר לפני מע״מ:<strong> 240 ש״ח</strong></p>
                             <p>מע״מ:<strong> 240 ש״ח</strong></p>
                             <p>סה״כ מחיר לפני מע״מ:<strong> 280 ש״ח</strong></p>
                             <div class="row text-right">
