--- a/themes/demo/pages/products.htm
+++ b/themes/demo/pages/products.htm
@@ -26,7 +26,7 @@ layout = "default"
             </p>
         </div>
     </div>
-    <div class="row text-center">
+    <div class="row text-center" style="margin-top: 20px;margin-bottom: 20px;">
         <div class="col-md-10 col-sm-12">
             <div class="row">
                 <div class="col-md-3 col-sm-6 col-xs-12">
