product-info fix

--- a/themes/demo/pages/product-info.htm
+++ b/themes/demo/pages/product-info.htm
@@ -27,10 +27,10 @@ layout = "default"
     </div>
     <div class="row text-center">
         <div class="col-md-10">
-            <div class="row">
+            <div class="row" style="margin-top: 20px;margin-bottom: 20px;">
                 <div class="col-md-4">
                     <div class="product">
-                        <img src="/themes/demo/assets/images/key.png">
+                        <img src="/themes/demo/assets/images/key.png" style="    margin-bottom: 30px;    margin-top: 30px;">
                     </div>
                 </div>
                 <div class="col-md-8">
@@ -63,10 +63,10 @@ layout = "default"
                         </div>
                     </div>
                     <hr style="padding: 0;">
-                    <div class="row text-right">
-                        <div class="col-md-4"><input type="button" class="invite-more button" name="send-invitation" value="סיים הזמנה "></div>
-                        <div class="col-md-4"><input type="button" class="contact-form button" name="invite-more" value="הוסף להצעה "></div>
-                        <div class="col-md-4"><input type="button" class="contact-form button" name="invite-more" value=" <  חזור"></div>
+                    <div class="row text-right" style="margin-right: -25px;">
+                        <div class="col-md-4"><input type="button" class="invite-more button" name="send-invitation" value="סיים הזמנה " style="width: 160px !important;"></div>
+                        <div class="col-md-4"><input type="button" class="contact-form button" name="invite-more" value="הוסף להצעה " style="width: 160px !important;"></div>
+                        <div class="col-md-4"><input type="button" class="contact-form button" name="invite-more" value=" <  חזור" style="width: 160px !important;"></div>
                     </div>
                 </div>
             </div>
