--- a/themes/demo/content/lessons.htm
+++ b/themes/demo/content/lessons.htm
@@ -1,29 +1,19 @@
 <div class="class-select">
+
     <nav>
+        <ul><h4>
+            שיעורים
+        </h4>
+
+        </ul>
         <ul>
-            <li class="active">
-                <a href="/sample-lesson-1">שיעורים</a></li>
-            <li>
-                <a href="#">פריצת דלתות בתים</a>
-            </li>
-            <li>
-                <a href="#">מנעולים</a>
-            </li>
-            <li>
-                <a href="#">פריצת כספות</a>
-            </li>
-            <li>
-                <a href="#">פריצת מנעוליי תליה</a>
-            </li>
-            <li>
-                <a href="#">שכפול מפתחות רכבים</a>
-            </li>
-            <li>
-                <a href="#">שכפול מפתחות דלתות</a>
-            </li>
-            <li>
-                <a href="#">קידוד ושכפול שלטים</a>
-            </li>
+            <p class="product-category"><a href="/sample-lesson-1">פריצת דלתות בתים</a></p>
+            <p class="product-category"><a href="#">מנעולים</a></p>
+            <p class="product-category"><a href="#">פריצת כספות</a></p>
+            <p class="product-category"><a href="#">פריצת מנעוליי תליה</a></p>
+            <p class="product-category"><a href="#">שכפול מפתחות רכבים</a></p>
+            <p class="product-category"><a href="#">שכפול מפתחות דלתות</a></p>
+            <p class="product-category"><a href="#">קידוד ושכפול שלטים</a></p>
         </ul>
     </nav>
 </div>
