--- a/themes/demo/content/products-category.htm
+++ b/themes/demo/content/products-category.htm
@@ -1,29 +1,20 @@
 <div class="class-select">
     <nav>
+        <ul><h4>
+            קטלוג מוצרים
+        </h4>
+
+        </ul>
         <ul>
-            <li class="active">
-                <a href="/product-category-1">שיעורים</a></li>
-            <li>
-                <a href="#">פריצת דלתות בתים</a>
-            </li>
-            <li>
-                <a href="#">מנעולים</a>
-            </li>
-            <li>
-                <a href="#">פריצת כספות</a>
-            </li>
-            <li>
-                <a href="#">פריצת מנעוליי תליה</a>
-            </li>
-            <li>
-                <a href="#">שכפול מפתחות רכבים</a>
-            </li>
-            <li>
-                <a href="#">שכפול מפתחות דלתות</a>
-            </li>
-            <li>
-                <a href="#">קידוד ושכפול שלטים</a>
-            </li>
+            <p class="product-category"><a href="/product-category-1">קטגוריה 1</a></p>
+            <p class="product-category"><a href="#">קטגוריה 2</a></p>
+            <p class="product-category"><a href="#">קטגוריה 3</a></p>
+            <p class="product-category"><a href="#">קטגוריה 4</a></p>
+            <p class="product-category"><a href="#">קטגוריה 5</a></p>
+            <p class="product-category"><a href="#">קטגוריה 6</a></p>
+            <p class="product-category"><a href="#">קטגוריה 7</a></p>
+            <p class="product-category"><a href="#">קטגוריה 8</a></p>
+            <p class="product-category"><a href="#">קטגוריה 9</a></p>
         </ul>
     </nav>
 </div>
