--- a/themes/demo/pages/cart.htm
+++ b/themes/demo/pages/cart.htm
@@ -177,15 +177,15 @@ layout = "default"
                 <div class="checkout-section">
                     <div class="row">
 
-                        <div class="col-md-6 text-right">
-                            <p style="margin-top: 20px">סה״כ מחיר לפני מע״מ:<strong> 240 ש״ח</strong></p>
-                            <p>מע״מ:<strong> 240 ש״ח</strong></p>
-                            <p>סה״כ מחיר לפני מע״מ:<strong> 280 ש״ח</strong></p>
+                        <div class="col-md-6 text-right" style="font-size: 2rem;margin-top: 40px;">
+                            <p style="font-size: 32px;">סה״כ מחיר לפני מע״מ:<strong> 240 ש״ח</strong></p>
+                            <p style="font-size: 32px;">מע״מ:<strong> 240 ש״ח</strong></p>
+                            <p style="font-size: 32px;">סה״כ מחיר לפני מע״מ:<strong> 280 ש״ח</strong></p>
                             <div class="row text-right">
-                                <div class="col-md-6">
+                                <div class="col-md-6 col-sm-6">
                                     <a href="/details-payment"><input type="button" class="invite-more button" name="send-invitation" value="שגר הזמנה"></a>
                                 </div>
-                                <div class="col-md-6">
+                                <div class="col-md-6 col-sm-6">
                                     <a href="/shop-products"><input type="button" class="contact-form button" name="invite-more" value="הזמן עוד"></a>
                                 </div>
                             </div>
