--- a/themes/demo/pages/details-payment.htm
+++ b/themes/demo/pages/details-payment.htm
@@ -13,8 +13,8 @@ layout = "default"
 </div>
 <div class="lesson-banner-title">
     <div class="row text-center">
-        <h2>תודה שהזמנתם מהאקדמיה הבינלאומית למנעולנות
-        </h2>
+        <div class="banner-text-h1"><h1>תודה שהזמנתם מהאקדמיה הבינלאומית למנעולנות
+        </h1></div>
     </div>
 </div>
 <div class="container">
@@ -24,12 +24,12 @@ layout = "default"
     <div class="row text-right">
         <div class="col-md-6">
             <h5 class="class-section-title" style="margin-right: 10px;">כתובת לשליחה</h5>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-12 text-center">
                     <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*כתובת" required>
                 </div>
             </div>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-6 text-right">
                     <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*מיקוד" required>
                 </div>
@@ -37,7 +37,7 @@ layout = "default"
                     <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*עיר" required>
                 </div>
             </div>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-6 text-right">
                     <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*מדינה" required>
                 </div>
@@ -48,7 +48,7 @@ layout = "default"
         </div>
         <div class="col-md-6">
             <h5 class="class-section-title" style="margin-right: 10px;">פרטי חשבון</h5>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-6 text-right">
                     <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*שם משפחה" required>
                 </div>
@@ -56,7 +56,7 @@ layout = "default"
                     <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*כתובת" required>
                 </div>
             </div>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-6 text-right">
                     <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*עיר" required>
                 </div>
@@ -64,7 +64,7 @@ layout = "default"
                     <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*טלפון" required>
                 </div>
             </div>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-6 text-right">
                     <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*מדינה" required>
                 </div>
@@ -72,17 +72,17 @@ layout = "default"
                     <input type="text" class="login-input" name="field2" onkeyup="rtl(this);" placeholder="*מיקוד" required>
                 </div>
             </div>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-12 text-center">
                     <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*כתובת" required>
                 </div>
             </div>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-12 text-center">
                     <input type="text" class="login-input" name="field1" onkeyup="rtl(this);" placeholder="*מייל" required>
                 </div>
             </div>
-            <div class="row login-row">
+            <div class="row input-row">
                 <div class="col-xs-12 text-right">
                     <div class="checkbox">
                         <input id="checkbox1" type="checkbox">
