--- a/themes/demo/pages/product-info.htm
+++ b/themes/demo/pages/product-info.htm
@@ -13,8 +13,9 @@ layout = "default"
 </div>
 <div class="lesson-banner-title">
     <div class="row text-center">
-        <h2>ברוכים הבאים לחנות
-        </h2>
+        <div class="banner-text-h1">
+        <h1>ברוכים הבאים לחנות
+        </h1></div>
     </div>
 </div>
 <div class="container">
@@ -30,10 +31,10 @@ layout = "default"
             <div class="row" style="margin-top: 20px;margin-bottom: 20px;">
                 <div class="col-md-4">
                     <div class="product">
-                        <img src="/themes/demo/assets/images/key.png" style="    margin-bottom: 30px;    margin-top: 30px;">
+                        <img id="zoom_01" src="/themes/demo/assets/images/key.png" data-zoom-image="/themes/demo/assets/images/key-large.png" style="    margin-bottom: 30px;    margin-top: 30px;">
                     </div>
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-6 col-md-offset-1">
                     <div class="row text-right">
                         <div class="star-rating">
                             <span class="product-detail-title">שם המוצר</span>
@@ -52,21 +53,24 @@ layout = "default"
                         <strong>מחיר: 500 ש״ח</strong>
                     </div>
                     <div class="row text-right">
-                        <div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-3 col-md-offset-3 text-right">
+                        <div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-6 col-md-offset-3 text-left">
                             <div class="form-group">
                                 <input id="colorful1" class="form-control" type="number" value="0"
                                        min="1" max="10"/>
                             </div>
                         </div>
                         <div class="col-xs-3 text-right" style="padding: 0;">
-                            <h5>כמות מגש גדול:</h5>
+                            <h5>כמות: </h5>
                         </div>
+                    </div>
+                    <div class="row text-right" style="font-size: 24px">
+                        <span>סה״כ מחיר הזמנה:</span><strong>500 ש״ח</strong>
                     </div>
                     <hr style="padding: 0;">
                     <div class="row text-right" style="margin-right: -25px;">
-                        <div class="col-md-4"><input type="button" class="invite-more button" name="send-invitation" value="סיים הזמנה " style="width: 160px !important;"></div>
-                        <div class="col-md-4"><input type="button" class="contact-form button" name="invite-more" value="הוסף להצעה " style="width: 160px !important;"></div>
-                        <div class="col-md-4"><input type="button" class="contact-form button" name="invite-more" value=" <  חזור" style="width: 160px !important;"></div>
+                        <div class="col-md-4"><input type="button" class="invite-more button" name="send-invitation" value="סיים הזמנה " style="width: 130px !important;"></div>
+                        <div class="col-md-4"><input type="button" class="contact-form button" name="invite-more" value="הוסף להצעה " style="width: 130px !important;"></div>
+                        <div class="col-md-4"><input type="button" class="contact-form button" name="invite-more" value=" <  חזור" style="width: 130px !important;"></div>
                     </div>
                 </div>
             </div>
@@ -77,3 +81,6 @@ layout = "default"
 
     </div>
 </div>
+<script type="text/javascriptt">
+
+</script>
