--- a/themes/demo/pages/sample-lesson.htm
+++ b/themes/demo/pages/sample-lesson.htm
@@ -13,9 +13,9 @@ layout = "default"
 </div>
 <div class="lesson-banner-title">
     <div class="row text-center">
-        <h2>
+        <div class="banner-text-h1"><h1>
             האקדמיה הבינלאומית למנעולנות
-        </h2>
+        </h1></div>
     </div>
 </div>
 <div class="container">
@@ -28,7 +28,7 @@ layout = "default"
     </div>
     <div class="row text-center">
         <div class="col-sm-8 col-sm-offset-2">
-            <div class="row text-center">
+            <div class="row text-center" style="margin-bottom: 60px;margin-top: 20px;">
                 <iframe src="http://www.youtube.com/embed/W7qWa52k-nE"
                         width="560" height="315" frameborder="0" allowfullscreen></iframe>
             </div>
