--- a/themes/demo/pages/products.htm
+++ b/themes/demo/pages/products.htm
@@ -416,7 +416,7 @@ layout = "default"
             </div>
         </div>
         <div class="col-md-2 col-sm-12">
-            {% content "lessons.htm" %}
+            {% content "products-category.htm" %}
         </div>
 
     </div>
