--- a/themes/demo/pages/sample-lesson-1.htm
+++ b/themes/demo/pages/sample-lesson-1.htm
@@ -14,9 +14,9 @@ layout = "default"
 </div>
 <div class="lesson-banner-title">
     <div class="row text-center">
-        <h2>
+        <h1 style="padding-bottom: 20px;">
             האקדמיה הבינלאומית למנעולנות
-        </h2>
+        </h1>
     </div>
 </div>
 <div class="container">
@@ -29,7 +29,7 @@ layout = "default"
     </div>
     <div class="row text-center">
         <div class="col-sm-8 col-sm-offset-2">
-            <div class="row text-center">
+            <div class="row text-center" style="margin-bottom: 30px;margin-top: 30px;">
                 <iframe src="http://www.youtube.com/embed/W7qWa52k-nE"
                         width="560" height="315" frameborder="0" allowfullscreen></iframe>
             </div>
@@ -72,11 +72,11 @@ layout = "default"
                                     <div class="list-group ssilka">
 
                                         <label class=" list-group-radio">
-                                            <input type="radio" class="radio-custom" name="optradio2" data-toggle="modal" data-target="#sample_good">זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק
+                                            <input type="radio" class="radio-custom" name="optradio2" data-toggle="modal" data-target="#sample_good"  id="blue-button" data-color="blue">זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק
                                         </label>
 
                                         <label class=" list-group-radio">
-                                            <input type="radio" class="radio-custom" name="optradio2"  data-toggle="modal" data-target="#sample_bad">זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק
+                                            <input type="radio" class="radio-custom" name="optradio2"  data-toggle="modal" data-target="#sample_bad"  id="blue-button" data-color="blue">זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק
                                         </label>
                                     </div>
                                 </div>
@@ -86,7 +86,7 @@ layout = "default"
                     <div class="list-group">
                         <div class="list-group ">
                             <a href="#SoftPc3" class="list-group-item class-section" data-toggle="collapse"
-                               aria-expanded="false" aria-controls="collapseExample">
+                               aria-expanded="false" aria-controls="collapseExample" >
                                 <h5 class="class-section-title">שאלה רביעית</h5>
                                 <div style="margin-top:-12px;" class="pull-left"><i class="fa fa-sort-desc fa-color"></i></div>
                                 <p>זותה מנק הבקיץ אפאח דלאמת יבש, כאנה ניצאחו נמרגי שהכים תוק, הדש שנרא התידם זותה מנק ?</p>
@@ -115,7 +115,7 @@ layout = "default"
                         <img src="/themes/demo/assets/images/succeed.png" class="modal-logo">
                     </div>
                     <!--</div>-->
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button class="close btn-close" data-dismiss="modal" aria-label="Close">&times;</button>
                 </div>
                 <div class="modal-body text-center">
                     <h2>הצלחת!</h2>
@@ -144,7 +144,7 @@ layout = "default"
                         <img src="/themes/demo/assets/images/downvote.png" class="modal-logo" style="color: #3295ff">
                     </div>
                     <!--</div>-->
-                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <button class="close btn-close" data-dismiss="modal" aria-label="Close">&times;</button>
                 </div>
                 <div class="modal-body text-center">
                     <h2>מצטער!</h2>
